# POLYMORPH_LITE_MAIN

./: .coveragerc  .dockerignore  .env.development  .env.example  .env.production  .env.production.example  .env.production.template  .env.staging  .gitignore  BUGS_AND_FIXES.md  CHANGELOG.md  COMMIT_MESSAGE.txt  COMPLIANCE_GAP_ANALYSIS.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DEVELOPER.md  Dockerfile  Dockerfile.backend  Dockerfile.multi  FIXES.md  FIXES_COMPLETE.md  FIXES_SUMMARY.md  GIT_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PATCH_SUMMARY.md  PRODUCTION_DEPLOY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  STRUCTURE.md  TESTING.md  UPGRADE_ROADMAP.md  WORKFLOW_CAPABILITIES.md  alembic.ini  build.sh  (+22 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_support.md
.github/workflows/: ci-enhanced.yml  ci.yml  codacy.yml  codeql.yml  deploy.yml  fortify.yml  security.yml
.well-known/: security.txt
ai/: calibrate_raman.py  eval.py  model.py  model_version.json  service.py  train.py  train_pmm.py  train_raman_predictor.py
ai/models/: metrics_v20251129_192007.json  polymorph_model_v20251129_192007.joblib
ai/tests/: test_raman_predictor.py
ai/training/: train_polymorph.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  001_unified_schema.py  141745a63b7a_add_lims_tables_for_sample_tracking_.py  20241206_add_polymorph_modes.py  add_performance_indexes.py  add_polymorph_tables.py  add_workflow_checkpoints.py
bentoml_service/: Dockerfile  README.md  bentofile.yaml  example_request.json  generate_example_json.py  pmm_brain.py  requirements.txt  run_service.sh  service.py  test_service.py
checkpoints/: cartpole_agent.pt
colab/: GETTING_STARTED.md  POLYMORPH_LITE_Colab.ipynb  README.md
config/: config.yaml  policy_part11_matrix.yaml  prometheus.yml  raman.yaml
config/hardware_profiles/: ni_pcie_6363.yaml  ni_pxi_6733.yaml  ni_usb_6343.yaml
cyborg_mind/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  grafana_dashboard.json  requirements.txt
cyborg_mind/core/: agent.py  memory.py  model.py  preprocessing.py
cyborg_mind/inference/: inference.py
cyborg_mind/scripts/: train_gym_cartpole.py  train_minerl_navigate.py
cyborg_mind/tests/: test_core.py
data/: crystallization_demo.csv
docker/: .env.example  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml
docs/: API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_HARDENING.md  Developer_Guide.md  ENHANCEMENTS.md  GOLDEN_PATH_DEMO.md  HARDWARE_DRIVERS.md  HARDWARE_INTEGRATION.md  HARDWARE_SETUP.md  INSTALLATION.md  Operator_Guide.md  Pilot_SOW.md  Pricing_Sheet.md  QUICKSTART.md  README.md  README_overlays.md  README_wizard.md  SECURITY_HARDENING.md  STRUCTURE.md  TESTING.md  TIER1_HARDWARE_GUIDE.md  UPGRADE_GUIDE_v3_to_v4.md  UPGRADE_REPORT.md  USER_MANUAL.md  VALIDATION_EXECUTION_GUIDE.md  VERSION.md  Validation_Plan_v8.md  part11_mapping.md  recipes.md  safety_wiring.md
examples/: README.md  sample_data.json
frontend/: package-lock.json  package.json  vite.config.ts
gui-v2/: README.md
hardware_tests/: test_daq_real.py  test_hardware_pipeline.py  test_raman_real.py  test_safety_wrappers.py  test_tier1_integration.py
recipes/: batch_release_testing.yaml  crystallization_monitoring.yaml  demo_gate.yaml  process_optimization_doe.yaml
retrofitkit/: __init__.py  __version__.py  cli.py  config.py  logging.py
scripts/: apply_overlay.py  backup_database.py  check_db_health.py  clean_requirements.py  configure_observability.py  create_admin.py  create_admin_user.py  deploy.py  dev_runner.sh  generate_demo_data.py  generate_keys.py  generate_sbom.sh  hardware_wizard.py  migrate_db_layer.py  run_full_demo.sh  run_hero_demo.sh  select_hardware_profile.py  setup_dev.sh  start_gui.py  start_gui_v2.py  unified_cli.py  validate_fixes.sh  verify_fixes.py  verify_v5_2.py  verify_v5_3.py
terraform/: main.tf
tests/: conftest.py  requirements-test.txt  test_ai_circuit_breaker.py  test_ai_safety.py  test_ai_workflow.py  test_api_auth.py  test_api_compliance.py  test_api_devices.py  test_api_integration.py  test_api_samples.py  test_api_security.py  test_api_workflow_builder.py  test_api_workflows.py  test_auth.py  test_checkpoint_resume.py  test_cli_calibration.py  test_compliance.py  test_compliance_approvals.py  test_compliance_signatures.py  test_config_hygiene.py  test_core_foundation.py  test_database.py  test_db_integrity.py  test_drivers.py  test_error_handling.py  test_gating_hysteresis.py  test_health_api.py  test_health_metrics.py  test_infra_security.py  test_integration.py  test_integration_workflows.py  test_multi_tenant.py  test_operator_guardrails.py  test_orchestrator_integration.py  test_part11_compliance.py  test_performance.py  test_phase5_upgrades.py  test_phase6_hardening.py  test_pmm_brain.py  test_pmm_checkpoint.py  (+17 more)
ui/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ui_temp/: package-lock.json  package.json
validation/: run_iq.py  run_oq.py  run_pq.py
workflows/: hardware_test_workflow.yaml  hero_crystallization.yaml  ocean_multi_scan.yaml  tier1_daq_raman_sweep.yaml  tier1_raman_sweep_v2.yaml
(+309 files in other folders)
